250419 apply builder to dto