@@ -2,9 +2,9 @@ package backend.time.controller;
 
 import backend.time.config.auth.PrincipalDetail;
 import backend.time.dto.BoardDistanceDto;
-import backend.time.dto.BoardListResponseDto;
 import backend.time.dto.ResponseDto;
 import backend.time.dto.request.ScrapDto;
+import backend.time.dto.response.BoardResponseDto.BoardListResponseDto;
 import backend.time.model.Scrap;
 import backend.time.model.board.Board;
 import backend.time.service.ScrapService;
@@ -29,66 +29,67 @@ public class ScrapApiController {
 
     // 스크랩 하기 & 스크랩 취소
     @PostMapping("api/board/{id}/scrap")
-    public ResponseDto scrap(@AuthenticationPrincipal PrincipalDetail principalDetail, @PathVariable("id") Long id){
+    public ResponseDto scrap(@AuthenticationPrincipal PrincipalDetail principalDetail, @PathVariable("id") Long id) {
         Boolean isScrap = scrapService.doScrap(principalDetail.getMember(), id);
         Map<String, Object> data = new HashMap<>();
-        if(isScrap){
-            data.put("isScrap",true);
-            return new ResponseDto(HttpStatus.OK.value(),data);
-        }
-        else{
-            data.put("isScrap",false);
-            return new ResponseDto(HttpStatus.OK.value(),data);
+        if (isScrap) {
+            data.put("isScrap", true);
+            return new ResponseDto(HttpStatus.OK.value(), data);
+        } else {
+            data.put("isScrap", false);
+            return new ResponseDto(HttpStatus.OK.value(), data);
         }
     }
 
     // 스크랩 목록 가져오기
     @GetMapping("api/scrap-list")
-    public Result scrapList(@ModelAttribute @Valid ScrapDto scrapDto, @AuthenticationPrincipal PrincipalDetail principalDetail){
+    public Result scrapList(@ModelAttribute @Valid ScrapDto scrapDto,
+                            @AuthenticationPrincipal PrincipalDetail principalDetail) {
         Page<Scrap> scraps = scrapService.getScrapList(scrapDto, principalDetail.getMember());
 
         List<Board> boards = scraps.stream()
                 .map(Scrap::getBoard)
-                .collect(Collectors.toList());
+                .toList();
 
         List<BoardDistanceDto> boardDistanceDtos = boards.stream().map(board -> {
-            if(board.getAddress() !=null) {
-                double distance = calculateDistanceInKm(principalDetail.getMember().getLatitude(), principalDetail.getMember().getLongitude(), board.getLatitude(), board.getLongitude());
+            if (board.getAddress() != null) {
+                double distance = calculateDistanceInKm(principalDetail.getMember().getLatitude(),
+                        principalDetail.getMember().getLongitude(), board.getLatitude(), board.getLongitude());
                 return new BoardDistanceDto(board.getId(), Math.round(distance * 10) / 10.0);
+            } else {
+                return new BoardDistanceDto(board.getId(), 0D);
             }
-            else{
-                return new BoardDistanceDto(board.getId(),0D);
-            }
-        }).collect(Collectors.toList());
+        }).toList();
 
         // id를 key로 distance를 값으로 매핑
         Map<Long, Double> boardIdToDistanceMap = boardDistanceDtos.stream()
                 .collect(Collectors.toMap(BoardDistanceDto::getId, BoardDistanceDto::getDistance));
 
-        // 결과 DTO 리스트를 생성
         List<BoardListResponseDto> collect = boards.stream().map(board -> {
-            BoardListResponseDto dto = new BoardListResponseDto();
-            dto.setBoardId(board.getId());
-            dto.setTitle(board.getTitle());
-            dto.setItemTime(board.getItemTime());
-            dto.setItemPrice(board.getItemPrice());
-            dto.setCreatedDate(board.getCreateDate());
-            dto.setChatCount(board.getChatCount());
-            dto.setScrapCount(board.getScrapCount());
-            dto.setBoardState(board.getBoardState());
-            dto.setDistance(boardIdToDistanceMap.get(board.getId()));
-            if(board.getAddress() !=null) {
-                dto.setAddress(board.getAddress());
-            }
-            //이미지가 있으면 첫번째 사진의 storedFileName 넘겨줌 없으면 null
-            if (!board.getImages().isEmpty()) {
-                dto.setFirstImage(board.getImages().get(0).getStoredFileName());
-            }
+            BoardListResponseDto dto = getBoardListResponseDto(board,
+                    boardIdToDistanceMap);
 
             return dto;
         }).collect(Collectors.toList());
 
         return new Result(collect);
+    }
+
+    private static BoardListResponseDto getBoardListResponseDto(Board board, Map<Long, Double> boardIdToDistanceMap) {
+        BoardListResponseDto dto = BoardListResponseDto.builder()
+                .boardId(board.getId())
+                .title(board.getTitle())
+                .itemTime(board.getItemTime())
+                .itemPrice(board.getItemPrice())
+                .createdDate(board.getCreateDate())
+                .chatCount(board.getChatCount())
+                .scrapCount(board.getScrapCount())
+                .boardState(board.getBoardState())
+                .distance(boardIdToDistanceMap.get(board.getId()))
+                .address(board.getAddress() == null ? null : board.getAddress())
+                .firstImage(board.getImages().isEmpty() ? null : board.getImages().get(0).getStoredFileName())
+                .build();
+        return dto;
     }
 
     double calculateDistanceInKm(double lat1, double lon1, double lat2, double lon2) {
